--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"cors": "^2.8.5",
 		"express": "^4.16.4",
 		"nodemon": "^1.18.10",
-		"sqlite3": "^4.0.6"
+		"sqlite3": "^4.0.6",
+		"universal-cookie": "^3.1.0"
 	},
 	"scripts": {
 		"server": "nodemon src/server.js"
