--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "employee-manager",
 	"version": "0.1.0",
 	"dependencies": {
+		"bcrypt": "^3.0.5",
 		"compression": "^1.7.3",
 		"cors": "^2.8.5",
 		"express": "^4.16.4",
