--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"bcrypt": "^3.0.5",
 		"compression": "^1.7.3",
 		"cors": "^2.8.5",
+		"exceljs": "^1.9.0",
 		"express": "^4.16.4",
 		"nodemon": "^1.18.10",
 		"sqlite3": "^4.0.6",
